KVH/mykvh/Email-to-anything/objects/Lookup_Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Destination_Field__c</fullName>
        <label>Destination Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Upgraded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Upgraded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lookup_Mapping_Match_Type__c</fullName>
        <label>Lookup Mapping Match Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Earliest Created</fullName>
                </value>
                <value>
                    <fullName>Latest Created</fullName>
                </value>
                <value>
                    <fullName>Latest Modified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Match_Field__c</fullName>
        <label>Match Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Object__c</fullName>
        <label>Match Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewSearch_In__c</fullName>
        <label>Search In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Subject</fullName>
                </value>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Headers</fullName>
                </value>
                <value>
                    <fullName>To</fullName>
                </value>
                <value>
                    <fullName>From</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overwrite_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overwrite Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <label>Email Services Function</label>
        <referenceTo>Email_Services_Function__c</referenceTo>
        <relationshipLabel>Lookup Field Mappings</relationshipLabel>
        <relationshipName>Lookup_Field_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pattern__c</fullName>
        <label>Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_In__c</fullName>
        <label>Search In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subject</fullName>
                </value>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Subject &amp; Body</fullName>
                </value>
                <value>
                    <fullName>Subject &amp; Body &amp; Header</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lookup Field Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>